# cargo

./: Cargo.toml
src/cargo/ops/: cargo_new.rs  cargo_package.rs  registry.rs
src/cargo/sources/registry/: mod.rs
